--- a/vvm2d/Makefile
+++ b/vvm2d/Makefile
@@ -1,6 +1,6 @@
 # CC and CFLAGS are varilables
 CC = g++
-CFLAGS = -c
+CFLAGS = -Wall -c -std=c++11
 # -c option ask g++ to compile the source files, but do not link.
 OPTFLAGS = -O3
 
@@ -8,7 +8,7 @@ all	: bin/vvm2d
 	@echo -n ""
 
 bin/vvm2d	: main.o Declare.o Init.o Iteration.o Outputfile.o
-			$(CC) $(OPTFLAGS) main.o Declare.o Init.o Outputfile.o Iteration.o -o bin/vvm2d
+			$(CC) $(OPTFLAGS) main.o Declare.o Init.o Outputfile.o Iteration.o -I /Users/wei/Downloads/matplotlib-cpp-master/ -I /Users/wei/miniconda3/lib/python3.8/ -I /Users/wei/miniconda3/lib/python3.8/site-packages/numpy/core/include/ -L /usr/local/Frameworks/Python.framework/Versions/3.9/lib -lpython3.9 -o bin/vvm2d
 main.o 	   	: src/main.cpp
 			$(CC) $(CFLAGS) $(OPTFLAGS) $< -o $@
 Declare.o	: src/Declare.cpp
